import React from 'react';
import { shallow } from 'enzyme';
import { ExpenseList } from '../../components/ExpenseList';
import expenses from '../fixtures/expenses';

describe('ExpenseList Component', () => {
    test('Should render ExpenseList with expenses', () => {
        const wrapper = shallow(<ExpenseList expenses={expenses} />);
        expect(wrapper).toMatchSnapshot();
    });

    test('Should render ExpenseList with no-Expenses', () => {
        const wrapper = shallow(<ExpenseList expenses={[]} />);
        expect(wrapper).toMatchSnapshot();
    });
});