// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseList Component Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="mobile-only"
    >
      Expenses
    </div>
    <div
      className="desktop-only"
    >
      Expense
    </div>
    <div
      className="desktop-only"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`ExpenseList Component Should render ExpenseList with no-Expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="mobile-only"
    >
      Expenses
    </div>
    <div
      className="desktop-only"
    >
      Expense
    </div>
    <div
      className="desktop-only"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No Expenses!
      </span>
    </div>
  </div>
</div>
`;
